# rpm-shim

./: .pre-commit-config.yaml  CHANGELOG.md  Containerfile.tests  Makefile  README.md  entrypoint.sh  setup.cfg  tox.ini
.github/workflows/: prepare-release.yml  tests.yml
rpm/: __init__.py
tests/: Containerfile  entrypoint.sh  import.py
