[metadata]
name = rpm
description = Shim RPM module for use in virtualenvs.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/packit/rpm-shim
author = Red Hat
author_email = hello@packit.dev
license = MIT
license_files =
    LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development
    Topic :: Utilities
keywords =
    rpm
    virtualenv

[options]
packages = find:
python_requires = >=3.6
include_package_data = True

[options.extras_require]
testing =
    tox
